implement the service unit-tests